--- a/index.html
+++ b/index.html
@@ -6,10 +6,98 @@
         <title>DevJane Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
-
-
+        <link rel="stylesheet" href="./styles.css">
+        
     </head>
     <body>
-        
+        <!--Menu & Profile-->
+        <header>
+            <div class="logo">
+               <img src="./img/Recent Me.jpg" alt="">
+            </div>
+            <button class="nav-toggle" aria-label="toggle navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+                </ul> 
+            </nav>
+        </header>
+
+        <!--Intro-->
+        <section class="intro" id="home">
+            <h1 class="section__title section__title--intro">
+                Hi, I am <strong>Thando Funeka</strong>
+            </h1>
+            <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+            <img src="" alt="" class="intro__img">
+        </section>
+
+        <!--Services-->
+        <section class="my-services" id="services">
+            <h2 class="section__title section__title--services">What I do</h2>
+            <div class="services">
+                <div class="service">
+                    <h3>Design + Development</h3>
+                    <p>###</p>
+                </div>
+                <div class="service">
+                    <h3>Data Analysis</h3>
+                    <p>###</p>
+                </div>
+            </div>
+            <a href="#work" class="btn">My Work</a>
+        </section>
+
+        <!--About Me-->
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about">Software Developer Student based out of Durban</p>
+
+            <div class="about-me__body">
+                <p>###</p>
+                <p>###</p>
+            </div>
+
+            <img src="" alt="" class="about-me__img">
+        </section>
+
+        <!--My Work-->
+        <section class="my-work" id="work">
+            <h2 class="section__title section__title--work">My Work</h2>
+            <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
+
+            <div class="portfolio">
+                <a href="#" class="portfolio__item">
+                    <img src="" alt="" class="portfolio__img">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="" alt="" class="portfolio__img">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="" alt="" class="portfolio__img">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="" alt="" class="portfolio__img">
+                </a>
+            </div>
+        </section>
+
+        <!--Footer-->
+        <footer>
+            <a href="mailto:thandofuneka1@gmail.com" class="footer__link">Email Me</a>
+            <ul class="social-list">
+                <li class="social-list__item"><a class="social-list__link" href="https://codepen.io/Thando-Funeka">a</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://github.com/thandofuneka">b</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/thando-funeka-9b30ba256/">c</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
