--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DevJane Portfolio Website</title>
+        <title>DevThando Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
         <link rel="stylesheet" href="./styles.css">
@@ -13,7 +13,7 @@
         <!--Menu & Profile-->
         <header>
             <div class="logo">
-               <img src="./img/Recent Me.jpg" alt="">
+               <img src="./img/Preview.png" alt="">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -33,8 +33,8 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Thando Funeka</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-            <img src="" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro">Software dev Student</p>
+            <img src="./img/Recent Me.jpg" alt="Me " class="intro__img">
         </section>
 
         <!--Services-->
@@ -42,12 +42,25 @@
             <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
                 <div class="service">
-                    <h3>Design + Development</h3>
-                    <p>###</p>
+                    <h3>Software Development</h3>
+                    <p>As a Software Development student, I offer custom software, 
+                        web, and mobile app development services. I focus on 
+                        creating scalable, efficient, and user-friendly solutions. 
+                        My expertise includes code review, debugging, and software 
+                        optimization to ensure high-quality, secure, and performant 
+                        applications.
+                    </p>
                 </div>
                 <div class="service">
                     <h3>Data Analysis</h3>
-                    <p>###</p>
+                    <p>I offer comprehensive Data Analysis services, leveraging skills 
+                       gained through self-learning and certification. My services 
+                       include data cleaning, statistical analysis, and visualization 
+                       to provide actionable insights. I utilize various tools and 
+                       techniques to help businesses make data-driven decisions, 
+                       despite not holding a degree, my dedication and practical 
+                       experience ensure high-quality results.
+                    </p>
                 </div>
             </div>
             <a href="#work" class="btn">My Work</a>
@@ -59,8 +72,22 @@
             <p class="section__subtitle section__subtitle--about">Software Developer Student based out of Durban</p>
 
             <div class="about-me__body">
-                <p>###</p>
-                <p>###</p>
+                <p>I have a strong background in mathematics, honed from a young age 
+                   and further solidified through international competition and 
+                   academic excellence. My journey in software development and data
+                   analysis has been driven by a passion for learning and 
+                   self-improvement. This foundation in mathematics has equipped me 
+                   with strong analytical and problem-solving skills, allowing me to 
+                   approach complex challenges with precision and creativity.
+                </p>
+                <p>My skills have been acquired through dedicated self-learning, 
+                   including a certificate in Data Analysis. I am always seeking 
+                   new ways to improve and expand my knowledge, staying current 
+                   with industry trends and best practices. My commitment to 
+                   continuous learning ensures that I bring the latest techniques 
+                   and insights to every project, delivering high-quality, data-driven 
+                   solutions.
+                </p>
             </div>
 
             <img src="" alt="" class="about-me__img">
@@ -94,9 +121,21 @@
         <footer>
             <a href="mailto:thandofuneka1@gmail.com" class="footer__link">Email Me</a>
             <ul class="social-list">
-                <li class="social-list__item"><a class="social-list__link" href="https://codepen.io/Thando-Funeka">a</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://github.com/thandofuneka">b</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/thando-funeka-9b30ba256/">c</a></li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://codepen.io/Thando-Funeka">
+                        <i class="fa-brands fa-codepen"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://github.com/thandofuneka">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/thando-funeka-9b30ba256/">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
     </body>
