--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
         <link rel="stylesheet" href="./styles.css">
+        <link rel="javas" href="./index.js">
         
     </head>
     <body>
@@ -20,10 +21,10 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
                 </ul> 
             </nav>
         </header>
@@ -90,29 +91,38 @@
                 </p>
             </div>
 
-            <img src="" alt="" class="about-me__img">
+            <img src="./img/rec.jpg" alt="" class="about-me__img">
         </section>
 
         <!--My Work-->
+        <!--NB! Downloaded images-->>
         <section class="my-work" id="work">
             <h2 class="section__title section__title--work">My Work</h2>
             <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
             <div class="portfolio">
                 <a href="#" class="portfolio__item">
-                    <img src="" alt="" class="portfolio__img">
+                    <img src="./img/Best place to learn to code in Nigeria.jpeg" alt="" class="portfolio__img">
                 </a>
 
                 <a href="#" class="portfolio__item">
-                    <img src="" alt="" class="portfolio__img">
+                    <img src="./img/c276fea7-5497-4c66-915d-9eb34b910591.jpeg" alt="" class="portfolio__img">
                 </a>
 
                 <a href="#" class="portfolio__item">
-                    <img src="" alt="" class="portfolio__img">
+                    <img src="./img/Photo by Amza Andrei on Unsplash.jpeg" alt="" class="portfolio__img">
                 </a>
 
                 <a href="#" class="portfolio__item">
-                    <img src="" alt="" class="portfolio__img">
+                    <img src="./img/Photo by Emil Priver on Unsplash.jpeg" alt="" class="portfolio__img">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="./img/Programming Analytics.jpeg" alt="" class="portfolio__img">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="./img/Rethinking Programming_ Automated Observability _ HackerNoon.jpeg" alt="" class="portfolio__img">
                 </a>
             </div>
         </section>
