--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
         <link rel="stylesheet" href="./styles.css">
-        <link rel="javas" href="./index.js">
         
     </head>
     <body>
@@ -101,27 +100,27 @@
             <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
             <div class="portfolio">
-                <a href="#" class="portfolio__item">
+                <a href="./portfolio-item.html" class="portfolio__item">
                     <img src="./img/Best place to learn to code in Nigeria.jpeg" alt="" class="portfolio__img">
                 </a>
 
-                <a href="#" class="portfolio__item">
+                <a href="./portfolio-item.html" class="portfolio__item">
                     <img src="./img/c276fea7-5497-4c66-915d-9eb34b910591.jpeg" alt="" class="portfolio__img">
                 </a>
 
-                <a href="#" class="portfolio__item">
+                <a href="./portfolio-item.html" class="portfolio__item">
                     <img src="./img/Photo by Amza Andrei on Unsplash.jpeg" alt="" class="portfolio__img">
                 </a>
 
-                <a href="#" class="portfolio__item">
+                <a href="./portfolio-item.html" class="portfolio__item">
                     <img src="./img/Photo by Emil Priver on Unsplash.jpeg" alt="" class="portfolio__img">
                 </a>
 
-                <a href="#" class="portfolio__item">
+                <a href="./portfolio-item.html" class="portfolio__item">
                     <img src="./img/Programming Analytics.jpeg" alt="" class="portfolio__img">
                 </a>
 
-                <a href="#" class="portfolio__item">
+                <a href="./portfolio-item.html" class="portfolio__item">
                     <img src="./img/Rethinking Programming_ Automated Observability _ HackerNoon.jpeg" alt="" class="portfolio__img">
                 </a>
             </div>
@@ -148,5 +147,6 @@
                 </li>
             </ul>
         </footer>
+        <script src="./index.js"></script>
     </body>
 </html>
