--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -47,17 +47,17 @@
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://codepen.io/Thando-Funeka">
-                    <i class="fa-brands fa-codepen"></i>
+                    <i class="fab fa-codepen"></i>
                 </a>
             </li>
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/thandofuneka">
-                    <i class="fa-brands fa-github"></i>
+                    <i class="fab fa-github"></i>
                 </a>
             </li>
             <li class="social-list__item">
                 <a class="social-list__link" href="https://www.linkedin.com/in/thando-funeka-9b30ba256/">
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fab fa-linkedin"></i>
                 </a>
             </li>
         </ul>
