--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </li>
                 <li class="social-list__item">
                     <a class="social-list__link" href="https://www.linkedin.com/in/thando-funeka-9b30ba256/">
-                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
             </ul>
