--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
             <ul class="social-list">
                 <li class="social-list__item">
                     <a class="social-list__link" href="https://codepen.io/Thando-Funeka">
-                        <i class="fa-brands fa-codepen"></i>
+                        <i class="fab fa-codepen"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
                     <a class="social-list__link" href="https://github.com/thandofuneka">
-                        <i class="fa-brands fa-github"></i>
+                        <i class="fab fa-github"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
