--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -36,9 +36,9 @@
     </section>
     
     <div class="portfolio-item-individual">
-        <p>###</p>
+        <p>It is a website for photography </p>
         <img src="./img/Photo by Amza Andrei on Unsplash.jpeg" alt="Project">
-        <p>###</p>
+        <p>....The End</p>
     </div>
 
      <!--Footer-->
