--- a/4.html
+++ b/4.html
@@ -29,16 +29,17 @@
     <!--Intro-->
     <section class="intro" >
         <h1 class="section__title section__title--intro">
-            The title <strong>of my project</strong>
+            <strong>Cache Bank Business Landing Page</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Glam Art Media</p>
-        <img src="./img/Photo by Amza Andrei on Unsplash.jpeg" alt="Project " class="intro__img">
+        <p class="section__subtitle section__subtitle--intro">HTML, CSS </p>
+        <img src="./img/Screenshot 2024-11-10 122505.png" alt="Project " class="intro__img">
     </section>
     
     <div class="portfolio-item-individual">
-        <p>It is a website for photography </p>
-        <img src="./img/Photo by Amza Andrei on Unsplash.jpeg" alt="Project">
-        <p>....The End</p>
+        <p>It is a landing page website for a bank </p>
+        <img src="./img/Screenshot 2024-11-10 122505.png" alt="Project">
+        <p>Making use of Html and css styling to make a landing page for a bank and a bit of JavaScript for the hamburger menu </p>
+        <a class="repo_link" href="https://github.com/thandofuneka/SDF_Portfolio_Piece_CSC20240121_WFO2407_Group-D_Thando-Funeka_SDF11.git">Find Repo Here</a>
     </div>
 
      <!--Footer-->
