--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
             <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
             <div class="portfolio">
-                <a href="./portfolio-item.html" class="portfolio__item">
-                    <img src="./img/Best place to learn to code in Nigeria.jpeg" alt="" class="portfolio__img">
+                <a href="./1.html" class="portfolio__item">
+                    <img src="./img/[JSL10 Solution].gif" alt="Escape Vanilla JS Challenge" class="portfolio__img">
                 </a>
 
-                <a href="./portfolio-item.html" class="portfolio__item">
-                    <img src="./img/c276fea7-5497-4c66-915d-9eb34b910591.jpeg" alt="" class="portfolio__img">
+                <a href="./2.html" class="portfolio__item">
+                    <img src="./img/Screenshot 2024-10-01 001446.png" alt="Agile Board" class="portfolio__img">
                 </a>
 
-                <a href="./portfolio-item.html" class="portfolio__item">
-                    <img src="./img/Photo by Amza Andrei on Unsplash.jpeg" alt="" class="portfolio__img">
+                <a href="./3.html" class="portfolio__item">
+                    <img src="./img/Screenshot 2024-11-10 120429.png" alt="Footer design" class="portfolio__img">
                 </a>
 
-                <a href="./portfolio-item.html" class="portfolio__item">
-                    <img src="./img/Photo by Emil Priver on Unsplash.jpeg" alt="" class="portfolio__img">
+                <a href="./4.html" class="portfolio__item">
+                    <img src="./img/Screenshot 2024-11-10 122505.png" alt="Cache Bank Landing Page" class="portfolio__img">
                 </a>
 
-                <a href="./portfolio-item.html" class="portfolio__item">
-                    <img src="./img/Programming Analytics.jpeg" alt="" class="portfolio__img">
+                <a href="./5.html" class="portfolio__item">
+                    <img src="./img/image.png" alt="Book Connect" class="portfolio__img">
                 </a>
 
-                <a href="./portfolio-item.html" class="portfolio__item">
-                    <img src="./img/Rethinking Programming_ Automated Observability _ HackerNoon.jpeg" alt="" class="portfolio__img">
+                <a href="./6.html" class="portfolio__item">
+                    <img src="./img/CodeSpacePetsInstagram.gif" alt="CodeSpacePetsInstagram" class="portfolio__img">
                 </a>
             </div>
         </section>
